--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,6 @@
 
 - name: create a symlink
   file: state=link src=/opt/flyway-4.2.0 dest=/opt/flyway
+
+- name: put a config file
+  template: src=flyway.conf dest=/opt/flyway/conf/flyway.conf backup=yes
